--- a/src/AzureManagedIdentity.Svc/AzureManagedIdentity.Svc.csproj
+++ b/src/AzureManagedIdentity.Svc/AzureManagedIdentity.Svc.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'ManagedIdentitySample' " />
   <ItemGroup>
     <PackageReference Include="Ardalis.ApiEndpoints" Version="4.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
